[package]
name = "wavrw-cli"
version.workspace = true
edition.workspace = true
description = "WAV file metadata read/write utility"
authors.workspace = true
readme.workspace = true
repository = "https://github.com/briandorsey/wavrw/wavrw-cli"
license.workspace = true
keywords = ["parser", "metadata", "wav"]
categories = ["multimedia::encoding", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavrw = { path = "../wavrw" }
anyhow.workspace = true
tracing.workspace = true
itertools.workspace = true
tracing-subscriber = "0.3.18"
clap = { version = "4.1.1", features = ["derive", "help", "usage", "error-context", "wrap_help", "cargo"] }

[[bin]]
name = "wavrw"


