[package]
name = "wavrw-cli"
version.workspace = true
edition.workspace = true
description = "WAV file metadata read/write utility"
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["parser", "metadata", "wav"]
categories = ["multimedia::encoding", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavrw = { path = "../wavrw" }
anyhow = { version = "1.0.68", default-features = false, features = ["std"] }
tracing.workspace = true
itertools.workspace = true
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"]}
clap = { version = "4.1.1", features = ["derive", "help", "usage", "error-context", "wrap_help", "cargo"] }

[build-dependencies]
anyhow = "1.0.68"

[[bin]]
name = "wavrw"

# disable docs in CLI to avoid rustdoc collision
# https://github.com/rust-lang/cargo/issues/6313
doc = false

[package.metadata.dist]
formula = "wavrw"
