[package]
name = "wavrw"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
hex = "0.4.3"
hexdump = "0.1.1"
itertools.workspace = true
num_enum = "0.7.2"
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[lints]
workspace = true

[[bench]]
name = "my_benchmark"
harness = false

