[package]
name = "wavrw"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = { version = "0.13.3", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
itertools.workspace = true
num_enum = { version = "0.7.2", default-features = false }
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hexdump = "0.1.1"

[lints]
workspace = true

[[bench]]
name = "my_benchmark"
harness = false

